--- a/style.css
+++ b/style.css
@@ -1,61 +1,70 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-  }
+  background-color: gray;
+  font-family: "Roboto", sans-serif;
+  text-align: center !important;
+}
+
+
+
+.botoes button {
+
+  margin-right: 10px;
+  border-radius: 5px;
+  padding: 8px 16px;
+  font-size: 14px;
+}
+.label-matriz{
+  font-family: "Roboto", sans-serif;
+  color: black;
+}
+
+.caixa{
+  padding: 50px 0;
+}
+
+
+
+
+
+form input[type="number"],
+form button {
+  padding: 8px;
+  border-radius: 5px;
+  font-size: 14px;
+  background-color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  color: black;
+}
+
+
+
+form button {
+  margin-top: 10px;
+}
+
+#solucao {
+  margin-top: 20px;
+  color: black;
+  font-size: 16px;
+}
+
+.celula-matriz {
+  width: 70px;
+}
+
+
+
+.linha-matriz {
+  white-space: pre-wrap;
+  display: flex;
+  justify-content: cenleftter;
+}
+
+input[type="text"] {
+  margin-right: 2px;
+  margin-bottom: 2px;
+  border: 1px  lightblue solid;
+  border-radius: 2px;
+  padding: 2px;
   
-  h1 {
-    text-align: center;
-  }
-  
-  .calculator {
-    max-width: 600px;
-    margin: 0 auto;
-  }
-  
-  h2 {
-    margin-top: 20px;
-  }
-  
-  input[type="number"] {
-    width: 100%;
-    padding: 5px;
-    font-size: 16px;
-  }
-  
-  button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    margin-top: 10px;
-  }
-  
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 10px;
-  }
-  
-  table td {
-    padding: 5px;
-    border: 1px solid #ccc;
-  }
-  
-  select {
-    width: 100%;
-    padding: 5px;
-    font-size: 16px;
-  }
-  
-  p {
-    margin-top: 10px;
-  }
-  
-  #stepsContainer {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-top: 10px;
-  }
+}
